Add functionality for app to listen to notifications from backend

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,8 @@
 .header {
 	background-color: white;
 	border-radius: 15px;
+	border: 4px solid #1e1e1e;
+	margin-bottom: 20px;
 	ul {
 		display: flex;
 		justify-content: space-between;
