--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,20 +1,67 @@
+@use "../../styles/partials/variables" as *;
+
 .header {
-	background-color: white;
-	border-radius: 15px;
-	border: 4px solid #1e1e1e;
-	margin-bottom: 20px;
-	ul {
+	background-color: $primary-white;
+	border: 1.5px solid $primary-black;
+	margin-bottom: 1.25rem;
+	padding: 1rem 3rem;
+
+	.nav {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		margin-top: 0;
-		list-style-type: none;
 
-		div {
-			width: 50px;
-			height: 50px;
+		&__menu {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			background-color: $primary-pink;
+			width: 3.125rem;
+			height: 3.125rem;
 			border-radius: 50%;
-			background-color: grey;
+
+			&:hover {
+				cursor: pointer;
+				background-color: $secondary-pink;
+			}
+		}
+
+		&__notification {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			gap: 50px;
+		}
+
+		&__icon {
+			width: 1.5625rem;
+		}
+
+		&__link {
+			text-decoration: none;
+			color: $primary-black;
+		}
+
+		&__logo {
+			font-size: 2.1875rem;
+			text-transform: uppercase;
+		}
+
+		&__avatar {
+			display: flex;
+			align-items: center;
+			gap: 0.9375rem;
+			margin-left: 3.125rem;
+		}
+
+		&__avatar-wrapper {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			background-color: $primary-pink;
+			width: 3.125rem;
+			height: 3.125rem;
+			border-radius: 50%;
 		}
 	}
 }
