--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -1,10 +1,14 @@
+@use "./variables" as *;
+@use "./typography";
+
 * {
 	box-sizing: border-box;
+	font-family: "DMSans"; //add backup
+	color: $primary-black;
 }
 
 body {
 	margin: 0;
-	background-image: url(./assets/images/mesh-gradient.png);
-	background-size: cover;
+	background-color: $primary-pink;
 	padding: 15px;
 }
