--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -5,3 +5,8 @@ $primary-pink: #ffc2d1;
 $primary-black: #282828;
 //$primary-black: #1e1e1e  //original
 $secondary-pink: #ff7ec4;
+$secondary-ash: #949494;
+$secondary-grey: #dfdfdf;
+
+//font-size
+$h1-font-size: 3.125rem;
