--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -1,14 +1,59 @@
+@use "../../styles/partials/variables" as *;
+
 .product-card {
+	border: 1px solid $primary-black;
+	width: 25vw;
+	min-width: 300px;
+	//height: 400px;
+	padding: 40px 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+
 	&__image {
-		width: 100px;
+		width: 50%;
+		margin-bottom: 50px;
 	}
 
-	span,
-	h2 {
-		width: 100px;
+	&__info {
+		display: flex;
+		flex-direction: column;
+		gap: 5px;
+		margin-bottom: 20px;
+		width: 80%;
 	}
 
-	span {
-		display: inline-block;
+	&__brand {
+		color: $secondary-ash;
+		align-self: flex-end;
+		font-size: 18px;
+	}
+
+	&__name {
+		font-weight: 400;
+		font-size: 20px;
+		margin: 0;
+	}
+
+	&__icon-wrapper {
+		display: flex;
+		justify-content: center;
+		width: 3.125rem;
+		height: 3.125rem;
+		border-radius: 50%;
+		background-color: $primary-pink;
+
+		&:hover {
+			background-color: $secondary-pink;
+		}
+	}
+
+	&__icon {
+		width: 1.5625rem;
+	}
+
+	&__link {
+		align-self: flex-end;
 	}
 }
