--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -1,6 +1,10 @@
 .products__list {
+	flex: 0.8;
 	display: flex;
 	flex-flow: row wrap;
-	gap: 50px;
+	//gap: 50px;
 	justify-content: space-around;
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
