--- a/src/pages/WishlistPage/WishlistPage.scss
+++ b/src/pages/WishlistPage/WishlistPage.scss
@@ -1,7 +1,14 @@
+@use "../../styles/partials/variables" as *;
+
 .wishlist {
+	&__title {
+		text-align: center;
+		font-size: $h1-font-size;
+		font-weight: 400;
+	}
 	&__list {
 		display: flex;
-		gap: 50px;
+		//gap: 50px;
 		flex-wrap: wrap;
 	}
 }
