--- a/src/components/WishItem/WishItem.scss
+++ b/src/components/WishItem/WishItem.scss
@@ -1,5 +1,47 @@
+@use "../../styles/partials/variables" as *;
+
 .wishlistProduct-card {
-	img {
-		width: 100px;
+	border: 1px solid $primary-black;
+	width: 25vw;
+	min-width: 300px;
+	//height: 400px;
+	padding: 40px 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+
+	&__image {
+		width: 50%;
+		margin-bottom: 50px;
+	}
+
+	&__info {
+		display: flex;
+		flex-direction: column;
+		gap: 5px;
+		margin-bottom: 20px;
+		width: 80%;
+	}
+
+	&__name {
+		font-weight: 400;
+		font-size: 20px;
+		margin: 0;
+	}
+
+	&__brand {
+		color: $secondary-ash;
+		align-self: flex-end;
+		font-size: 18px;
+	}
+
+	&__icon {
+		width: 25px;
+		align-self: flex-start;
+
+		&:hover {
+			cursor: pointer;
+		}
 	}
 }
