--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -7,6 +7,14 @@ $primary-black: #282828;
 $secondary-pink: #ff7ec4;
 $secondary-ash: #949494;
 $secondary-grey: #dfdfdf;
+$secondary-green: #003d2e;
+$secondary-light-green: #4d776d;
 
 //font-size
 $h1-font-size: 3.125rem;
+
+//padding
+$desktop-padding: 3.5rem;
+
+//borders
+$component-border: 1.5px solid $primary-black;
