--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,7 +1,56 @@
+@use "../../styles/partials/variables" as *;
+
 .homepage {
-	height: 90vh;
+	background-color: $primary-pink;
+	flex: 1;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 $desktop-padding;
+
+	&__slogan {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		&-title {
+			font-family: "BodoniModa";
+
+			&--accent {
+				text-transform: capitalize;
+				font-family: "ImperialScript";
+				display: block;
+				color: $secondary-light-green;
+				font-size: 70px;
+				position: relative;
+				top: -40px;
+			}
+		}
+	}
+
+	&__sticker-container {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		gap: 100px;
+	}
+
+	&__sticker {
+		width: 250px;
+
+		&--add {
+			width: 400px;
+		}
+
+		&:hover {
+			transform: scale(1.1);
+		}
+	}
+}
+
+.homepage__copy {
 	padding: 15px;
-	position: relative;
+	//position: relative;
 
 	&__sticker {
 		position: absolute;
