--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -3,16 +3,19 @@
 
 * {
 	box-sizing: border-box;
-	//font-family: "DMSans"; //add backup
+	font-family: "BodoniModa"; //add backup serif font
 	color: $primary-black;
 }
 
 body {
 	margin: 0;
+	min-height: 100vh;
 }
 
 h1 {
-	text-align: center;
+	font-family: "TBJMaltaMiniEdition";
 	font-size: $h1-font-size;
+	text-transform: uppercase;
 	font-weight: 400;
+	margin: 0;
 }
