--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,7 @@
 
 .header {
 	background-color: $primary-pink;
-	border-bottom: $component-border;
+	border-bottom: $separator-border;
 	padding: 1rem $desktop-padding;
 	display: flex;
 	justify-content: space-between;
