--- a/src/components/FilterItems/FilterItems.scss
+++ b/src/components/FilterItems/FilterItems.scss
@@ -2,6 +2,7 @@
 
 .filter-card {
 	width: 20vw;
+	min-width: min-content;
 
 	&__name {
 		margin: 0;
@@ -15,6 +16,7 @@
 		justify-content: space-between;
 		border-bottom: 1.5px solid $secondary-grey;
 		padding: 20px $desktop-padding;
+		gap: 5px;
 
 		&:hover {
 			cursor: pointer;
@@ -36,9 +38,10 @@
 
 	&__list-item {
 		text-transform: capitalize;
-		border: 1px solid $primary-black;
+		border: $component-border;
 		padding: 2px 10px;
 		border-radius: 15px;
+		font-size: 14px;
 
 		&:hover {
 			background-color: $secondary-pink;
