--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -1,10 +1,11 @@
+@use "../../styles/partials/variables" as *;
+
 .products__list {
-	//flex: 0.8;
 	display: flex;
 	flex-flow: row wrap;
-	//gap: 50px;
+	gap: 30px;
 	justify-content: space-around;
 	list-style: none;
 	margin: 0;
-	padding: 0;
+	padding: 40px $desktop-padding;
 }
