--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -4,7 +4,7 @@
 	display: flex;
 	flex-flow: row wrap;
 	gap: 30px;
-	justify-content: space-around;
+	justify-content: space-between;
 	list-style: none;
 	margin: 0;
 	padding: 40px $desktop-padding;
