--- a/src/pages/WishlistPage/WishlistPage.scss
+++ b/src/pages/WishlistPage/WishlistPage.scss
@@ -3,9 +3,11 @@
 .wishlist {
 	&__list {
 		display: flex;
-		//gap: 50px;
-		flex-wrap: wrap;
+		flex-flow: row wrap;
+		justify-content: center;
+		list-style: none;
+		gap: 50px;
 		margin: 0;
-		padding: 0;
+		padding: 40px $desktop-padding;
 	}
 }
