--- a/src/components/ProductForm/ProductForm.scss
+++ b/src/components/ProductForm/ProductForm.scss
@@ -1,56 +1,82 @@
 @use "../../styles/partials/typography";
 @use "../../styles/partials/variables" as *;
 
-.productForm {
-	&__title {
-		text-transform: capitalize;
+.form {
+	display: flex;
+	flex-direction: column;
+	border: 1px solid black;
+	padding: 20px 100px;
+	position: relative;
+
+	&--error {
+		color: $secondary-pink;
 	}
-	.form {
+
+	&__label {
+		font-family: "TBJMaltaMiniEdition";
+		font-size: 25px;
+	}
+
+	&__icon {
+		width: 20px;
+		&--cross {
+		}
+
+		&:hover {
+			cursor: pointer;
+		}
+	}
+
+	&__input-container {
 		display: flex;
 		flex-direction: column;
-		border: 1px solid black;
-		padding: 20px;
+		margin-bottom: 20px;
+		gap: 4px;
+	}
 
-		&__label {
-			font-size: 18px;
+	&__field {
+		border: 1.5px solid $secondary-grey;
+		border-radius: 30px;
+		padding: 0.5rem 1.5rem;
+
+		&:active,
+		&:focus {
+			border-color: $primary-black;
+			outline: none;
 		}
 
-		&__field {
-			border: 2px solid $secondary-grey;
-			height: 3.4375rem;
-			padding: 0.625rem 1rem;
+		&--error {
+			border-color: $secondary-pink;
+		}
+
+		&::placeholder {
+			font-family: "BodoniModa";
+			color: $secondary-ash;
 			font-size: 1.125rem;
-			border-radius: 30px;
-
-			&:active,
-			&:focus {
-				outline: 2px solid $primary-black;
-				border: none;
-			}
-
-			&::placeholder {
-				font-family: "DMSans";
-				color: $primary-black;
-				font-size: 1.125rem;
-			}
 		}
+	}
 
-		&__button-container {
-			display: flex;
-			justify-content: space-between;
-		}
+	&__option {
+		text-transform: capitalize;
+	}
 
-		&__button {
-			border: none;
-			background-color: $primary-pink;
-			padding: 4px 16px;
-			border-radius: 18px;
-			font-size: 18px;
+	&__button-container {
+		align-self: flex-end;
+	}
 
-			&:hover {
-				background-color: $secondary-pink;
-				cursor: pointer;
-			}
+	&__button {
+		border: none;
+		background-color: $primary-pink;
+		padding: 4px 16px;
+		border-radius: 18px;
+		font-size: 18px;
+		width: min-content;
+
+		margin-top: 8px;
+
+		&:hover {
+			background-color: $secondary-pink;
+			cursor: pointer;
 		}
 	}
 }
