--- a/src/components/DeleteModal/DeleteModal.scss
+++ b/src/components/DeleteModal/DeleteModal.scss
@@ -1,6 +1,58 @@
+@use "../../styles/partials/variables" as *;
+
 .deleteModal {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100vh;
+	width: 100vw;
+	background-color: rgba($primary-pink, 0.8);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	&-container {
+		background-color: $primary-white;
+		padding: 60px 60px 30px;
+		width: 60vw;
+		border: $separator-border;
+		display: flex;
+		flex-direction: column;
+		position: relative;
+	}
+
+	&-content {
+		display: flex;
+		flex-direction: column;
+	}
+
+	&__title {
+		font-weight: 600;
+		text-transform: none;
+	}
+
+	&__button {
+		margin-top: 20px;
+		align-self: flex-end;
+		background-color: $primary-pink;
+		border: $component-border;
+		padding: 4px 16px;
+		border-radius: 18px;
+		font-size: 14px;
+
+		&:hover {
+			background-color: $secondary-pink;
+			cursor: pointer;
+		}
+	}
+
 	&__icon {
+		position: absolute;
 		width: 25px;
+		top: 25px;
+		right: 25px;
 
 		&:hover {
 			cursor: pointer;
