--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -8,7 +8,7 @@ $secondary-pink: #ff7ec4;
 $secondary-ash: #949494;
 $secondary-grey: #dfdfdf;
 $secondary-green: #003d2e;
-$secondary-light-green: #4d776d;
+$secondary-light-green: #3e893d;
 
 $status-red: red;
 $status-green: green;
