--- a/src/components/WishItem/WishItem.scss
+++ b/src/components/WishItem/WishItem.scss
@@ -2,21 +2,21 @@
 
 .wishlistProduct-card {
 	border: $component-border;
-	border-radius: 200px;
+	border-radius: 12.5rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-	padding: 40px;
+	padding: 2.5rem;
 	overflow: hidden;
 
-	gap: 20px;
-	max-width: 250px;
-	height: 400px;
+	gap: 1.25rem;
+	max-width: 15.625rem;
+	height: 25rem;
 
 	&__image {
 		width: 100%;
-		margin-bottom: 15px;
+		margin-bottom: 0.9375rem;
 	}
 
 	&__info {
@@ -27,9 +27,9 @@
 
 	&__name {
 		font-weight: 400;
-		font-size: 14px;
+		font-size: 0.875rem;
 		margin: 0;
-		max-height: 66px;
+		max-height: 4.125rem;
 		overflow: auto;
 	}
 
@@ -38,11 +38,11 @@
 		font-family: "TBJMaltaMiniEdition";
 		text-transform: uppercase;
 		align-self: flex-end;
-		font-size: 20px;
+		font-size: 1.25rem;
 	}
 
 	&__icon {
-		width: 25px;
+		width: 1.5625rem;
 
 		&:hover {
 			cursor: pointer;
