--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -4,10 +4,10 @@
 	border-right: $separator-border;
 
 	&__reset {
-		margin-top: 10px;
+		margin-top: 0.625rem;
 		padding-left: $desktop-padding;
 		font-family: "TBJMaltaMiniEdition";
-		font-size: 25px;
+		font-size: 1.5625rem;
 		color: $secondary-pink;
 
 		&:hover {
