--- a/src/components/FilterItems/FilterItems.scss
+++ b/src/components/FilterItems/FilterItems.scss
@@ -8,15 +8,15 @@
 		margin: 0;
 		font-family: "TBJMaltaMiniEdition";
 		text-transform: capitalize;
-		font-size: 25px;
+		font-size: 1.5625rem;
 		font-weight: 400;
 	}
 
 	&__header {
 		display: flex;
 		justify-content: space-between;
-		border-bottom: 1.5px solid $secondary-grey;
-		padding: 20px $desktop-padding;
+		border-bottom: 0.0938rem solid $secondary-grey;
+		padding: 1.25rem $desktop-padding;
 		gap: 5px;
 
 		&:hover {
@@ -33,16 +33,16 @@
 		list-style: none;
 		display: flex;
 		flex-flow: row wrap;
-		margin: 20px 0px 40px;
-		gap: 20px;
+		margin: 1.25rem 0 2.5rem;
+		gap: 1.25rem;
 	}
 
 	&__list-item {
 		text-transform: capitalize;
 		border: $component-border;
-		padding: 2px 10px;
-		border-radius: 15px;
-		font-size: 14px;
+		padding: 0.125rem 0.625rem;
+		border-radius: 0.9375rem;
+		font-size: 0.875rem;
 
 		&:hover {
 			background-color: $secondary-pink;
