--- a/src/components/ProductForm/ProductForm.scss
+++ b/src/components/ProductForm/ProductForm.scss
@@ -3,42 +3,43 @@
 
 .form-container {
 	display: flex;
-	border: 1px solid $primary-black;
+	border: $separator-border;
 
 	.form__image-wrapper {
 		background-color: $primary-pink;
-		width: 62px;
+		width: 3.875rem;
 	}
 
 	.form {
 		display: flex;
 		flex-direction: column;
-		border-left: 1px solid black;
-		padding: 65px 70px 30px;
+		border-left: $separator-border;
+		padding: 4.0625rem 4.375rem 1.875rem;
 		position: relative;
 		flex: 1;
 
 		&--error {
 			color: $secondary-pink;
-			font-size: 13px;
+			font-size: 0.8125rem;
 			position: absolute;
-			left: 10px;
-			bottom: -20px;
+			left: 0.625rem;
+			bottom: -1.25rem;
 		}
 
 		&__label {
 			font-family: "TBJMaltaMiniEdition";
-			font-size: 25px;
-			width: 100px;
+			font-size: 1.5625rem;
+			width: 6.25rem;
 			text-transform: capitalize;
 		}
 
 		&__icon {
-			width: 20px;
+			width: 1.25rem;
+
 			&--cross {
 				position: absolute;
-				top: 20px;
-				right: 20px;
+				top: 1.25rem;
+				right: 1.25rem;
 			}
 
 			&:hover {
@@ -48,8 +49,8 @@
 
 		&__input-container {
 			display: flex;
-			gap: 30px;
-			margin-bottom: 32px;
+			gap: 1.875rem;
+			margin-bottom: 2rem;
 			align-items: center;
 		}
 
@@ -61,7 +62,7 @@
 
 		&__field {
 			border: 1.5px solid $secondary-grey;
-			border-radius: 30px;
+			border-radius: 1.875rem;
 			padding: 0.3rem 1rem;
 			flex: 1;
 
@@ -78,7 +79,7 @@
 			&::placeholder {
 				font-family: "BodoniModa";
 				color: $secondary-ash;
-				font-size: 16px;
+				font-size: 1rem;
 			}
 		}
 
@@ -102,10 +103,9 @@
 		}
 
 		&__button-content {
-			//gap: 5px;
 			background-color: pink;
-			width: 40px;
-			height: 40px;
+			width: 2.5rem;
+			height: 2.5rem;
 			display: flex;
 			justify-content: center;
 			border-radius: 50%;
@@ -113,7 +113,7 @@
 			&--active {
 				padding: 0.5rem 1rem;
 				gap: 5px;
-				border-radius: 30px;
+				border-radius: 1.875rem;
 				width: unset;
 				height: unset;
 			}
@@ -124,7 +124,7 @@
 		}
 
 		&__button-text {
-			font-size: 16px;
+			font-size: 1rem;
 		}
 	}
 }
