--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -3,9 +3,11 @@
 .products__list {
 	display: flex;
 	flex-flow: row wrap;
-	gap: 30px;
+	gap: 1.875rem;
 	justify-content: space-between;
 	list-style: none;
 	margin: 0;
-	padding: 40px $desktop-padding;
+	padding: 2.5rem $desktop-padding;
+	max-height: 90vh;
+	overflow-y: auto;
 }
