--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -7,7 +7,7 @@
 	justify-content: center;
 	align-items: center;
 	position: relative;
-	padding: 100px;
+	padding: 6.25rem;
 
 	&__slogan {
 		display: flex;
@@ -36,7 +36,7 @@
 
 		&:hover {
 			.homepage__sticker {
-				transform: scale(1.1);
+				transform: scale(1.3);
 			}
 		}
 	}
@@ -48,14 +48,14 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-around;
-		gap: 50px;
+		gap: 3.125rem;
 
 		&--one {
-			left: 10px;
+			left: 0.625rem;
 		}
 
 		&--two {
-			right: 10px;
+			right: 0.625rem;
 		}
 	}
 
@@ -63,28 +63,28 @@
 		position: relative;
 
 		&--inventory {
-			left: 150px;
-			top: 10px;
+			left: 9.375rem;
+			top: 0.625rem;
 		}
 
 		&--wishlist {
-			left: 120px;
-			bottom: 10px;
+			left: 7.5rem;
+			bottom: 0.625rem;
 		}
 
 		&--about {
-			right: 100px;
+			right: 6.25rem;
 		}
 		&--add {
-			right: 50px;
-			top: 10px;
+			right: 3.125rem;
+			top: 0.625rem;
 		}
 	}
 
 	&__sticker-text {
 		font-family: "TBJMaltaMiniEdition";
 		text-transform: uppercase;
-		font-size: 40px;
+		font-size: 2.5rem;
 		position: absolute;
 		display: block;
 		top: 40%;
@@ -112,10 +112,10 @@
 	}
 
 	&__sticker {
-		width: 260px;
+		width: 16.25rem;
 
 		&--about {
-			width: 320px;
+			width: 20rem;
 		}
 
 		&--wishlist {
