--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -16,16 +16,16 @@
 
 		&-title {
 			font-family: "BodoniModa";
-			font-size: 50px;
+			font-size: 2.5rem;
 
 			&--accent {
 				text-transform: capitalize;
 				font-family: "ImperialScript";
 				display: block;
 				color: $secondary-light-green;
-				font-size: 70px;
+				font-size: 3.75rem;
 				position: relative;
-				top: -40px;
+				top: -2.5rem;
 			}
 		}
 	}
