Style 404 page & add routing functionality to the page when a product id doesn't exist

--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -40,6 +40,8 @@
 		align-self: flex-end;
 		font-size: 1.25rem;
 		font-weight: 600;
+		max-height: 2.8125rem;
+		overflow: auto;
 	}
 
 	&__name {
