Add hover animation

--- a/src/components/FilterItems/FilterItems.scss
+++ b/src/components/FilterItems/FilterItems.scss
@@ -33,7 +33,7 @@
 		list-style: none;
 		display: flex;
 		flex-flow: row wrap;
-		margin: 1.25rem 0 2.5rem;
+		margin: 1.25rem 1.25rem 2.5rem 0;
 		gap: 1.25rem;
 	}
 
