--- a/src/components/WishItem/WishItem.scss
+++ b/src/components/WishItem/WishItem.scss
@@ -9,10 +9,13 @@
 	align-items: center;
 	padding: 2.5rem;
 	overflow: hidden;
-
 	gap: 1.25rem;
 	max-width: 15.625rem;
 	height: 25rem;
+
+	&:hover {
+		box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 1);
+	}
 
 	&__image {
 		width: 100%;
