--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -3,4 +3,9 @@
 .pageHeader {
 	border-bottom: $separator-border;
 	padding: 1rem $desktop-padding 0.5rem;
+	background-color: $primary-pink;
+
+	&__title {
+		font-weight: 600;
+	}
 }
