--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,6 +1,6 @@
 //Colors
 $primary-white: #fffdfd;
-$primary-pink: #ffc2d1;
+$primary-pink: #fdbad8;
 //$primary-pink: #fbc1d4;
 $primary-black: #282828;
 //$primary-black: #1e1e1e  //original
@@ -10,9 +10,9 @@ $secondary-grey: #dfdfdf;
 $secondary-green: #003d2e;
 $secondary-light-green: #3e893d;
 
-$status-red: red;
-$status-green: green;
-$status-orange: orange;
+$status-red: #f04438;
+$status-green: #12b76a;
+$status-orange: #f79009;
 
 //font-size
 $h1-font-size: 2.5rem;
