--- a/src/components/ProductDetails/ProductDetails.scss
+++ b/src/components/ProductDetails/ProductDetails.scss
@@ -12,10 +12,10 @@
 	}
 
 	&-content {
-		padding: 2.5rem;
+		padding: 2.5rem 2.5rem 1.5rem;
 		display: flex;
 		flex-direction: column;
-		gap: 2.1875rem;
+		gap: 2rem;
 	}
 
 	&-container {
@@ -35,7 +35,7 @@
 		align-items: center;
 		justify-content: space-between;
 		border-bottom: 1px solid $secondary-grey;
-		padding-bottom: 1rem;
+		padding-bottom: 0.8rem;
 	}
 
 	&__title {
