--- a/src/pages/SignUpPage/SignUpPage.scss
+++ b/src/pages/SignUpPage/SignUpPage.scss
@@ -1,7 +1,11 @@
+@use "../../styles/partials/variables" as *;
+
 .signUp {
 	flex: 1;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	background-color: $primary-white;
+	padding: 85px 300px;
 }
