--- a/src/components/UserForm/UserForm.scss
+++ b/src/components/UserForm/UserForm.scss
@@ -5,6 +5,8 @@
 	border: $separator-border;
 	width: 100%;
 	display: flex;
+	position: relative;
+	margin: -5rem 0 0 -3.875rem;
 
 	.userForm__image-wrapper {
 		background-color: $primary-pink;
@@ -18,25 +20,31 @@
 		flex-direction: column;
 		justify-content: space-around;
 		align-items: center;
-		padding: 30px;
+		padding: 50px;
 		gap: 1.5rem;
 	}
 
 	.userForm {
 		display: flex;
 		flex-direction: column;
-		gap: 0.5rem;
+		gap: 1.5rem;
 
 		&__field {
 			border: 1.5px solid $primary-black;
 			border-radius: 1.875rem;
-			padding: 0.3rem 1rem;
-			width: 300px;
+			padding: 0.5rem 1rem;
+			width: 350px;
+			font-size: 1rem;
 
 			&:active,
 			&:focus {
 				border-color: $primary-black;
 				outline: none;
+			}
+
+			&::placeholder {
+				color: $secondary-ash;
+				font-size: 1rem;
 			}
 
 			&--error {
@@ -56,21 +64,29 @@
 			text-transform: uppercase;
 			align-items: center;
 			gap: 10px;
+			padding: 0.5rem;
+
+			&:hover {
+				border: 0.5px solid $secondary-ash;
+				border-radius: 1.875rem;
+			}
 
 			&-name {
 				color: $secondary-ash;
 				font-family: "TBJMaltaMiniEdition";
+				font-size: 1.375rem;
+				margin-top: 4px;
 			}
 		}
 
 		&__icon-wrapper {
 			display: flex;
 			justify-content: center;
-			width: 2.1875rem;
-			height: 2.1875rem;
+			width: 2.7188rem;
+			height: 2.7188rem;
 			border-radius: 50%;
 			background-color: $primary-pink;
-			border: $component-border;
+			border: $separator-border;
 
 			&:hover {
 				background-color: $secondary-pink;
@@ -78,12 +94,17 @@
 		}
 
 		&__icon {
-			width: 1rem;
+			width: 1.3rem;
+
+			&--left {
+				width: 1rem;
+			}
 		}
 
 		&__button {
 			border: none;
 			background-color: $primary-white;
+			padding: 0;
 
 			&:hover {
 				cursor: pointer;
@@ -93,6 +114,21 @@
 		&--error {
 			color: $secondary-pink;
 			font-size: 0.8125rem;
+		}
+
+		&__message {
+			position: absolute;
+			bottom: 5.75rem;
+			margin: 0;
+			font-size: 0.8125rem;
+
+			&--success {
+				color: $status-green;
+			}
+
+			&--error {
+				color: $status-red;
+			}
 		}
 	}
 }
