--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,7 @@
 .header {
 	background-color: $primary-pink;
 	border-bottom: $separator-border;
-	padding: 0.7rem $desktop-padding;
+	padding: 0.5rem $desktop-padding;
 
 	&--white {
 		background-color: $primary-white;
@@ -25,6 +25,7 @@
 				left: 0;
 				right: 0;
 				text-align: center;
+				margin-top: 0.5rem;
 			}
 		}
 
@@ -36,26 +37,30 @@
 			}
 		}
 
-		&__icon-container {
+		&__list {
 			display: flex;
 			gap: 2.5rem;
+			padding: 0;
+			margin: 0;
+			list-style-type: none;
 		}
 
 		&__icon-wrapper {
 			border-radius: 50%;
-			width: 45px;
-			height: 45px;
+			width: 2.8125rem;
+			height: 2.8125rem;
 			display: flex;
 			justify-content: center;
 			position: relative;
 
 			&:hover {
 				background-color: $secondary-pink;
+				border: $component-border;
 			}
 		}
 		&__logo {
 			font-family: "Halimun";
-			font-size: 1.5625rem;
+			font-size: 1.375rem;
 		}
 
 		&__notification-status {
@@ -64,8 +69,8 @@
 			border-radius: 50%;
 			background-color: $status-green;
 			position: absolute;
-			right: 10px;
-			top: 10px;
+			right: 0.625rem;
+			top: 0.625rem;
 			border: 1px solid black;
 		}
 	}
@@ -76,8 +81,8 @@
 	background-color: $primary-white;
 	z-index: 1;
 	border: 1.5px solid $primary-black;
-	border-radius: 7px;
-	top: 48px;
+	border-radius: 0.4375rem;
+	top: 3rem;
 	width: max-content;
 
 	&__link {
@@ -91,7 +96,7 @@
 	}
 
 	&__item {
-		padding: 8px;
+		padding: 0.5rem;
 		border-bottom: 1.5px solid $primary-black;
 		text-align: center;
 
