--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -3,11 +3,15 @@
 .products__list {
 	display: flex;
 	flex-flow: row wrap;
-	gap: 1.875rem;
+	gap: 0.5rem;
 	justify-content: space-between;
 	list-style: none;
 	margin: 0;
 	padding: 2.5rem $desktop-padding;
 	max-height: 90vh;
 	overflow-y: auto;
+}
+
+.products__item {
+	transform: scale(0.95);
 }
