--- a/src/components/WishItem/WishItem.scss
+++ b/src/components/WishItem/WishItem.scss
@@ -18,7 +18,7 @@
 	}
 
 	&__image {
-		width: 100%;
+		width: 95%;
 		margin-bottom: 0.9375rem;
 	}
 
@@ -41,7 +41,10 @@
 		font-family: "TBJMaltaMiniEdition";
 		text-transform: uppercase;
 		align-self: flex-end;
-		font-size: 1.25rem;
+		font-size: 1.375rem;
+		font-weight: 600;
+		max-height: 3rem;
+		overflow: auto;
 	}
 
 	&__icon {
