--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,11 +1,11 @@
 @use "../../styles/partials/variables" as *;
 
-.signUp {
+.login {
 	flex: 1;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	background-color: $primary-white;
-	padding: 85px 400px;
+	padding: 5.3125rem 25rem;
 }
