--- a/src/pages/NotFound/NotFound.scss
+++ b/src/pages/NotFound/NotFound.scss
@@ -3,11 +3,16 @@
 
 .notFound {
 	flex: 1;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
 	padding: $desktop-padding 0;
+
+	&-container {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin-top: 5rem;
+		gap: 1.25rem;
+	}
 
 	&__status {
 		display: flex;
@@ -33,14 +38,12 @@
 	}
 
 	&__button {
-		position: relative;
-		top: 4.375rem;
 		margin-top: 1.25rem;
 		background-color: $primary-pink;
 		border: $component-border;
 		padding: 0.25rem 1rem;
 		border-radius: 1.125rem;
-		font-size: 0.875rem;
+		font-size: 1rem;
 		text-transform: capitalize;
 
 		&:hover {
