--- a/src/components/DeleteModal/DeleteModal.scss
+++ b/src/components/DeleteModal/DeleteModal.scss
@@ -2,12 +2,7 @@
 
 .deleteModal {
 	position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	height: 100vh;
-	width: 100vw;
+	inset: 0;
 	background-color: rgba($primary-pink, 0.8);
 	display: flex;
 	justify-content: center;
@@ -18,8 +13,6 @@
 		padding: 3.75rem 3.75rem 1.875rem;
 		width: 60vw;
 		border: $separator-border;
-		display: flex;
-		flex-direction: column;
 		position: relative;
 	}
 
