--- a/src/pages/Wishlist/Wishlist.scss
+++ b/src/pages/Wishlist/Wishlist.scss
@@ -1,6 +1,44 @@
 @use "../../styles/partials/variables" as *;
 
 .wishlist {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+
+	&-wrapper {
+		flex: 1;
+	}
+
+	&__error {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin: 9.375rem auto 0;
+
+		&-message {
+			text-align: center;
+		}
+
+		&--bold {
+			font-weight: 800;
+		}
+
+		&-button {
+			background-color: $primary-pink;
+			border: $component-border;
+			padding: 0.25rem 1rem;
+			border-radius: 1.125rem;
+			font-size: 1rem;
+			text-transform: capitalize;
+			width: max-content;
+
+			&:hover {
+				background-color: $secondary-pink;
+				cursor: pointer;
+			}
+		}
+	}
+
 	&__list {
 		display: flex;
 		flex-flow: row wrap;
