--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -40,16 +40,22 @@
 		align-self: flex-end;
 		font-size: 1.375rem;
 		font-weight: 600;
-		max-height: 3rem;
-		overflow: auto;
+		max-height: 3.125rem;
+	}
+
+	&__brand,
+	&__name {
+		overflow: hidden;
+		display: -webkit-box;
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical;
 	}
 
 	&__name {
 		font-weight: 400;
 		font-size: 0.875rem;
 		margin: 0;
-		max-height: 5.375rem;
-		overflow: auto;
+		max-height: 2.8125rem;
 	}
 
 	&__icon-wrapper {
