--- a/src/components/WishItem/WishItem.scss
+++ b/src/components/WishItem/WishItem.scss
@@ -32,8 +32,15 @@
 		font-weight: 400;
 		font-size: 0.875rem;
 		margin: 0;
-		max-height: 4.125rem;
-		overflow: auto;
+		max-height: 2.8125rem;
+	}
+
+	&__brand,
+	&__name {
+		overflow: hidden;
+		display: -webkit-box;
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical;
 	}
 
 	&__brand {
@@ -44,7 +51,6 @@
 		font-size: 1.375rem;
 		font-weight: 600;
 		max-height: 3rem;
-		overflow: auto;
 	}
 
 	&__icon {
